# kowai

./: .gitignore  CMakeLists.txt
KowaiEngine/: CMakeLists.txt
KowaiEngine/include/KowaiEngine/: asset_bank.h  camera.h  engine.h  engine_internal.h  entity.h  helpers.h  imgui_backend.h  input.h  kowai.h  mesh.h  model.h  renderer.h  scene.h  time.h  types.h
KowaiEngine/src/: asset_bank.c  camera.c  engine.c  entity.c  imgui_backend.cpp  input.c  kowai.cpp  model.c  renderer.c  scene.c  time.c
KowaiTest/: .gitignore  CMakeLists.txt  input.kowai
KowaiTest/scenes/: TestScene.kscene  dadada.kscene  nueva.kscene  sdadasdadsa.kscene
KowaiTest/shaders/: triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
KowaiTest/src/: main.c  main.cpp
